--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   splash_screen_view: ^3.0.0
   flutter_launcher_icons: ^0.9.2
   scoped_model: ^2.0.0-nullsafety.0
-  firebase_core_desktop: ^0.1.1-dev.0
+  # firebase_core_desktop: ^0.1.1-dev.0
 
 
 
